--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,13 @@
-!!!
-%html
-  %head
-    %title DeployPortal
-    = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+!!! 5
+%html{ lang: "en"}
+  = render 'layouts/head'
   %body
-    = yield
+    = render 'layouts/nav'
+    = render 'layouts/info'
+    - if content_for?(:title)
+      .container.container-title
+        = yield(:title)
+      %hr
+
+    .container.container-body
+      = yield
