Add friendly id and tweak model task

--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -16,4 +16,4 @@
               Logout
         - else
           %li
-            = link_to "Login", new_user_session_path, class: 'btn btn-success btn-login'
+            = link_to "Login", new_user_session_path
