--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -5,7 +5,7 @@
   %table.table
     %thead
       %tr
-        %th User
+        %th Creator
         %th Name
         %th Desc
         %th Status of last job
