Support api call

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -20,7 +20,7 @@
             %th Name
             %th Author
             %th Version
-            %th Desc
+            %th{width: '25%'} Desc
             %th Status
             %th Operations
 
