--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -8,6 +8,10 @@
       = link_to 'Deploy Portal II', root_path, class: "navbar-brand"
 
     .collapse.navbar-collapse
+      %ul.nav.navbar-nav
+        - if current_user
+          %li= link_to 'Tasks', tasks_path
+          %li= link_to 'Enviroments', enviroments_path
       %ul.nav.navbar-nav.pull-right
         - if current_user
           %li
