--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -1,6 +1,6 @@
 - @tasks.each do |task|
   %tr
-    %td= task.name
+    %td= link_to task.name, task_path(task)
     %td= task.author
     %td= task.version
     %td= task.desc
@@ -8,7 +8,7 @@
       = job_status task.jobs.first
     %td
       .btn-group
-        = link_to run_task_path(task), class: 'btn btn-success btn-xs', method: :post, remote: true, title: 'run this task as a job' do
+        = link_to run_task_path(task), class: 'btn btn-success btn-xs', method: :post, title: 'run this task as a job' do
           = fa_icon 'play'
           Play
         = link_to task_jobs_path(task), class: 'btn btn-default btn-xs', title: 'Show all jobs that ran' do
