Add env group management

--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,7 +1,7 @@
 %head
   %meta{charset: "utf-8"}
-  %meta{content: "Deploy Portal II", name: "description"}
-  %title Deploy Portal II
+  %meta{content: Setting.site, name: "description"}
+  %title= Setting.site
   = stylesheet_link_tag    "application", :media => "all"
   = javascript_include_tag "application"
   = csrf_meta_tags
