Add user function

--- a/app/views/env_groups/_note.html.haml
+++ b/app/views/env_groups/_note.html.haml
@@ -1,5 +1,5 @@
 %hr
 %p NOTE: There are some magic env below that you can use it to control default process.
 %ul
-  %li TIMEOUT, this env will limit the process timeout in seconds.
+  %li TIMEOUT, this env will limit the process timeout in seconds, default is #{Build::TIMEOUT}s.
   %li CWD, this env will change the work directory
