--- a/app/views/users/myaccount.html.haml
+++ b/app/views/users/myaccount.html.haml
@@ -5,7 +5,7 @@
         .panel-heading
           API Token
         .panel-body
-          = simple_form_for(current_user, url: refresh_api_token_user_path, method: :post) do |f|
+          = simple_form_for(current_user, url: refresh_api_token_users_path, method: :post) do |f|
             = f.input :api_token, input_html: { readonly: true }
             = button_tag type: 'submit', class: 'btn btn-primary' do
               Rrefresh your token
@@ -14,7 +14,7 @@
       .panel-heading
         Change Password
       .panel-body
-        = simple_form_for(current_user) do |f|
+        = simple_form_for(current_user, url: update_password_users_path) do |f|
           = f.input :password
           = f.input :password_confirmation
           = button_tag type: 'submit', class: 'btn btn-primary' do
