--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -1,8 +1,6 @@
 - @tasks.each do |task|
   %tr
-    %td= link_to task.name, task_path(task)
-    %td= task.author
-    %td= task.version
+    %td This script #{link_to task.name, task_path(task)} version #{task.version} created by #{task.author}
     %td= task.desc
     %td{'data-column-id' => "task-#{task.id}-job"}
       = job_status task.jobs.first
@@ -10,17 +8,12 @@
       .btn-group
         = link_to run_task_path(task), class: 'btn btn-success btn-xs', method: :post, title: 'run this task as a job' do
           = fa_icon 'play'
-          Play
         = link_to task_jobs_path(task), class: 'btn btn-default btn-xs', title: 'Show all jobs that ran' do
           = fa_icon 'tasks'
-          Jobs
         - if current_user.admin?
           = link_to task_path(task, format: :yaml), class: 'btn btn-default btn-xs', title: 'Export this task' do
             = fa_icon 'download'
-            Export
           = link_to edit_task_path(task), class: 'btn btn-default btn-xs', title: 'Edit this task' do
             = fa_icon 'edit'
-            Edit
           = link_to task, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs', title: 'Delete this task' do
             = fa_icon 'remove'
-            Delete
