send email when a job is finished

--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -12,10 +12,13 @@
       .col-md-3
         = f.input :version
     .row
-      .col-md-3
+      .col-md-2
         %br
         = f.input :admin_only
-      .col-md-9
+      .col-md-2
+        %br
+        = f.input :notify
+      .col-md-8
         = f.input :update_url
 
     = f.input :desc
