--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -8,8 +8,10 @@
       .btn-group
         = link_to run_task_path(task), class: 'btn btn-success btn-xs', method: :post, title: 'run this task as a job' do
           = fa_icon 'play'
+          = 'Play' unless current_user.admin?
         = link_to task_jobs_path(task), class: 'btn btn-default btn-xs', title: 'Show all jobs that ran' do
           = fa_icon 'tasks'
+          = 'Results' unless current_user.admin?
         - if current_user.admin?
           = link_to task_path(task, format: :yaml), class: 'btn btn-default btn-xs', title: 'Export this task' do
             = fa_icon 'download'
